# dyros_ratroller

ratroller/: CMakeLists.txt  package.xml
ratroller/ascii/: ascii
ratroller/include/: math_type_define.h
ratroller/include/ratroller/: data_container.h  dynamics_manager.h  ratroller.h  realrobot_interface.h  redsvd.h  state_manager.h  terminal.h
ratroller/src/: dynamics_manager.cpp  link.cpp  main.cpp  mujoco_interface.cpp  ratroller.cpp  state_manager.cpp  terminal.cpp
ratroller_description/: CMakeLists.txt  package.xml
ratroller_description/mujoco_model/: dyros_red_robot.xml
ratroller_description/robots/: dyros_red_robot.urdf
ratroller_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
ratroller_gui/scripts/: ratroller_gui
ratroller_gui/src/ratroller_gui/: ratroller_gui.py
ratroller_launch/: CMakeLists.txt  package.xml
ratroller_launch/launch/: simulation.launch
